Add support for android

--- a/makefile.cargo
+++ b/makefile.cargo
@@ -1,4 +1,14 @@
+ifeq (androideabi,$(findstring androideabi,$(TARGET)))
+
+CC := $(TARGET)-gcc
+AR := $(TARGET)-ar
+
+else
+
 CC ?= gcc
+AR ?= ar
+
+endif
 
 CFLAGS += -O3 -fPIC
 
